Titulo no fragment de anamnese

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="button">Button</string>
     <string name="add">ADD</string>
     <string name="newInfo">Informação</string>
+    <string name="txtTitle" />
+    <string name="anamnesis_content">Anamnesis content</string>
 </resources>
