--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="physicalExam_content">Physical Exam content</string>
+    <string name="complementaryExams_content">Complementary Exams Content</string>
 </resources>
