--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,12 @@
     <string name="button">Button</string>
     <string name="add">ADD</string>
     <string name="newInfo">Informação</string>
-    <string name="txtTitle" />
+    <string name="txtTitle"> Anamnese </string>
     <string name="anamnesis_content">Anamnesis content</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="physicalExam_content">Physical Exam content</string>
     <string name="complementaryExams_content">Complementary Exams Content</string>
     <string name="button_seach_case">Escolher casos</string>
+    <string name="stage_item">Stage Item</string>
 </resources>
