--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="physicalExam_content">Physical Exam content</string>
     <string name="complementaryExams_content">Complementary Exams Content</string>
     <string name="button_seach_case">Escolher casos</string>
+    <string name="button_download_case">Baixar casos</string>
     <string name="stage_item">Stage Item</string>
 </resources>
