--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="add">ADD</string>
     <string name="newInfo">Informação</string>
     <string name="txtTitle"> Stage Title </string>
+    <string name="title_diagnostic"> Diagnosticar paciente </string>
+    <string name="hypothesis"> Hipótese </string>
     <string name="stage_content">Stage content</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
